kubernetes/ingestion-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-api-deployment
  labels:
    app: ingestion-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingestion-api
  template:
    metadata:
      labels:
        app: ingestion-api
    spec:
      containers:
      - name: ingestion-api
        image: yasia/ingestion-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
