kubernetes/ingestion-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-api-service
spec:
  type: NodePort
  selector:
    app: ingestion-api
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30001
